Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-146

executable files on NFS share failed with "Text file busy" when executed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 1.8.7
    • Lustre 1.8.6
    • None
    • Use lustre as exported filesystem for NFSd.
    • 2
    • 3
    • 24,437
    • 9725

      We have exported the lustre filesystem over nfs from one of the lustre clients(say c1). We mount
      the nfs filesystem on another node(say n1). On the node n1, we create a executable script file(f1).
      We make a copy of this file f1 to f1.cpy. These files run on the nodes n1 as well as c1. But on
      other lustre clients, which have the lustre file system mounted, the script file f1.cpy does not
      execute where as the file f1 does.

      The following is the error message we get when we try the above.

      [root@sfsclient8 testfs]# ./hi_world_copy
      ./hi_world_copy: Text file busy

      The same problem will occur if this is compiled binary as well.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: