LU-146 executable files on NFS share failed with "Text file busy"        when executed.

Normal lustre client should revoke open lock for an executalbe
upon writing/executing in case an nfsd lustre client holds the
open lock.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: Ibe34dad69916621b3076bb269e9a88167f05cb95