lustre/mds/mds_open.c
@@ -1026,6 +1026,29 @@ out:
         return rc;
 }
 
+static int mds_revoke_open_lock(struct obd_device *obd, struct dentry *dchild,
+                                int child_mode)
+{
+        ldlm_policy_data_t policy = { .l_inodebits = { MDS_INODELOCK_OPEN } };
+        struct lustre_handle lockh = { 0 };
+        struct ldlm_res_id child_res_id;
+        int rc, lock_flags = 0;
+
+        memset(&child_res_id, 0, sizeof(child_res_id));
+        child_res_id.name[0] = dchild->d_inode->i_ino;
+        child_res_id.name[1] = dchild->d_inode->i_generation;
+
+        rc = ldlm_cli_enqueue_local(obd->obd_namespace, &child_res_id,
+                                    LDLM_IBITS, &policy, child_mode,
+                                    &lock_flags, ldlm_blocking_ast,
+                                    ldlm_completion_ast, NULL, NULL,
+                                    0, NULL, &lockh);
+        if (rc == ELDLM_OK)
+                ldlm_lock_decref(&lockh, child_mode);
+
+        return rc;
+}
+
 int mds_open(struct mds_update_record *rec, int offset,
              struct ptlrpc_request *req, struct lustre_handle *child_lockh)
 {
@@ -1386,6 +1409,19 @@ found_child:
 
         if (need_open_lock) {
                 rc = mds_get_open_lock(obd, dchild, child_mode, child_lockh, rep);
+                if (rc != ELDLM_OK)
+                        GOTO(cleanup, rc);
+        } else if (!(rec->ur_flags & MDS_OPEN_LOCK) &&
+                   S_ISREG(dchild->d_inode->i_mode) &&
+                   ((rec->ur_flags & FMODE_WRITE &&
+                     (dchild->d_inode->i_mode & S_IXUGO)) ||
+                    (rec->ur_flags & MDS_FMODE_EXEC))) {
+                /* if this is an executable, and a non-nfsd client open write or
+                 * execute it, revoke open lock in case other client holds a
+                 * open lock which denies writing/executing in mds_finish_open()
+                 * below. LU-146
+                 */
+                rc = mds_revoke_open_lock(obd, dchild, child_mode);
                 if (rc != ELDLM_OK)
                         GOTO(cleanup, rc);
         }
